--- a/public/styles/entry.scss
+++ b/public/styles/entry.scss
@@ -1,1 +1,4 @@
-@import 'public/assets/styles/login'
+// 第三方库css
+@import 'bower_components/angular-material/angular-material.scss';
+
+@import 'public/styles/index';
