--- a/public/index.jade
+++ b/public/index.jade
@@ -1,10 +1,16 @@
 doctype html
-html
+html.layout-column
 	head(lang="en")
 		meta(charset="utf-8")
-		meta(http-equiv="X-UA-Compatible" content="IE=edge")
-		meta(name="viewport" content="width=device-width, initial-scale=1")
-		script(src="scripts/libs.js")
-		script(src="scripts/main.js")
-	body(ng-app="myApp")
-		div 654654
+		meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
+		meta(name="apple-mobile-web-app-capable" content="yes")
+		meta(name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui")
+		link(rel="stylesheet" href="styles/entry.css")
+	body.layout-column.flex(ng-app="myApp")
+		div.layout-column.flex.main-wrapper
+			span.flex
+			p 汪剑巧大SB!
+			md-button rewt
+			span.flex
+	script(src="scripts/libs.js")
+	script(src="scripts/main.js")
