--- a/public/styles/entry.scss
+++ b/public/styles/entry.scss
@@ -1,4 +1,6 @@
 // 第三方库css
 @import 'bower_components/angular-material/angular-material.scss';
 
+//自己的scss
 @import 'public/styles/index';
+@import 'public/styles/login/login';
