--- a/public/index.jade
+++ b/public/index.jade
@@ -6,11 +6,9 @@ html.layout-column
 		meta(name="apple-mobile-web-app-capable" content="yes")
 		meta(name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui")
 		link(rel="stylesheet" href="styles/entry.css")
-	body.layout-column.flex(ng-app="myApp")
+	body.layout-column.flex(ng-app="myApp" ng-cloak)
 		div.layout-column.flex.main-wrapper
-			span.flex
-			p 汪剑巧大SB!
-			md-button rewt
-			span.flex
+			ui-view.layout-column.flex
+			
 	script(src="scripts/libs.js")
 	script(src="scripts/main.js")
