--- a/public/partials/login.jade
+++ b/public/partials/login.jade
@@ -1,2 +1,24 @@
-div
-	span welcome to Hanqiang WebSite
+div.layout-column.flex.login-bg-wrapper
+	span.flex
+	//- 登录div
+	div.login-wrapper.layout-column
+		form.layout-column.flex(name="loginForm")
+			h2.title 登 录
+			div.layout-row
+				md-input-container.flex
+					label 邮 箱
+					input(type="email" ng-pattern="/^.+@.+\..+$/" ng-model="logForm.account" name="account" required)
+					div(ng-messages="loginForm.account.$error" multiple md-auto-hide="false")
+						div(ng-message="required") 不能为空！
+						div(ng-message="pattern") 请输入正确的邮箱！
+			div.layout-row
+				md-input-container.flex
+					label 密 码
+					input(type="password" minlength="6" maxlength="20" ng-pattern="/^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{6,20}$/" ng-model="logForm.password" name="password" required)
+					div(ng-messages="loginForm.password.$error" multiple md-auto-hide="false")
+						div(ng-message="required") 不能为空！
+						div(ng-message="pattern") 密码由不少于6位数字和字母构成！
+			div.layout-row.submit-div
+				md-button.md-raised.md-primary(type="submit" ng-disabled="loginForm.$invalid" ui-sref="home") 我填好了
+	span.flex
+	
