--- a/public/styles/entry.scss
+++ b/public/styles/entry.scss
@@ -1,5 +1,7 @@
 // 第三方库css
 @import 'bower_components/angular-material/angular-material.scss';
+@import '../assets/styles/animate.css';
+@import '../assets/fonts/font-awesome.css';
 
 //自己的scss
 @import 'public/styles/index';
