--- a/public/partials/login.jade
+++ b/public/partials/login.jade
@@ -1,7 +1,7 @@
 div.layout-column.flex.login-bg-wrapper
 	span.flex
 	//- 登录div
-	div.login-wrapper.layout-column.animated.bounceInRight
+	div.login-wrapper.layout-column.animated.bounceInDown
 		form.layout-column.flex(name="loginForm")
 			h2.title 登 入
 			div.layout-row
