--- a/public/partials/home.jade
+++ b/public/partials/home.jade
@@ -1,1 +1,5 @@
-div this is homePage
+div.home-wrapper.layout-column
+	div.layout-column.flex.home-wrapper-inner.animated(ng-class="{true: 'fadeOut'}[isFade]" ng-show="!isFade")
+		span.flex
+		span.center-words ——MY&nbsp;&nbsp;&nbsp;&nbsp;LOVE——
+		span.flex
