--- a/public/styles/login/login.scss
+++ b/public/styles/login/login.scss
@@ -4,13 +4,16 @@
     background-position: 60% 60%;
 	.login-wrapper{
 		border-radius: 5px;
-		box-shadow: 0 0 25px 0.3px #a7a7a7;
+		box-shadow: 0 0 25px 3px #a7a7a7;
 		padding: 10px;
 		width: 30%;
 		font-size: 20px;
 		// color: #fff;
 		margin: auto;
-		background: #fff;
+		background: #fff url("../assets/images/reg_login.png") center no-repeat;
+		&.login-wrapper-real{
+			background: #fff url("../assets/images/login_real.png") center no-repeat;
+		}
 		.title{
 			color: rgb(63, 81, 181);
 			padding-bottom: 10px;
@@ -32,8 +35,9 @@
 				color: rgb(63, 81, 181);
 				text-align: right;
 				line-height: 48px;
-				font-size: 12px;
+				font-size: 16px;
 				span:hover{
+					cursor: pointer;
 					text-decoration: underline;
 				}
 			}
