--- a/public/partials/home.jade
+++ b/public/partials/home.jade
@@ -3,3 +3,5 @@ div.home-wrapper.layout-column
 		span.flex
 		span.center-words ——MY&nbsp;&nbsp;&nbsp;&nbsp;LOVE——
 		span.flex
+	div.real-home-wrapper-inner
+		home-fall(data="")
