--- a/public/styles/entry.scss
+++ b/public/styles/entry.scss
@@ -7,3 +7,4 @@
 @import 'public/styles/index';
 @import 'public/styles/login/login';
 @import 'public/styles/home/home';
+@import 'public/styles/directives/homeDirective';
