--- a/public/styles/home/home.scss
+++ b/public/styles/home/home.scss
@@ -2,12 +2,22 @@
 	width: 100%;
 	height: 100%;
 	.home-wrapper-inner{
+		position: relative;
+		z-index: 1;
 		background: url("../assets/images/home_bg.jpg") no-repeat center center;
 		.center-words{
 			text-align: center;
 			font-size: 70px;
 			color: #fff;
 		}
+	}
+	.real-home-wrapper-inner{
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 0;
 	}
 	
 }
