--- a/public/partials/home.jade
+++ b/public/partials/home.jade
@@ -1,7 +1,7 @@
 div.home-wrapper.layout-column
-	div.layout-column.flex.home-wrapper-inner.animated(ng-class="{true: 'fadeOut'}[isFade]" ng-show="!isFade")
-		span.flex
-		span.center-words ——MY&nbsp;&nbsp;&nbsp;&nbsp;LOVE——
-		span.flex
+	//- div.layout-column.flex.home-wrapper-inner.animated(ng-class="{true: 'fadeOut'}[isFade]" ng-show="!isFade")
+	//- 	span.flex
+	//- 	span.center-words ——MY&nbsp;&nbsp;&nbsp;&nbsp;LOVE——
+	//- 	span.flex
 	div.real-home-wrapper-inner
 		home-fall(data="")
