--- a/public/partials/directives/homeDirective.jade
+++ b/public/partials/directives/homeDirective.jade
@@ -1,4 +1,6 @@
 div.fall-wrapper
-	div.falls(ng-repeat="data in datas")
-		img.fall-inner-img(alt="" src="{{data.src}}")
-		p.fall-inner-p {{data.desc}}
+	div.falls
+		div.box(ng-repeat="data in datas")
+			div.pic
+				img.fall-inner-img(alt="" src="{{data.src}}")
+				//- p.fall-inner-p {{data.desc}}
