--- a/public/styles/directives/homeDirective.scss
+++ b/public/styles/directives/homeDirective.scss
@@ -1,4 +1,19 @@
 .fall-wrapper{
 	width: 100%;
 	height: 100%;
+	.falls{
+		padding: 10px;
+		-webkit-column-width: 202px;
+		-moz-column-width: 202px;
+		column-width: 202px;
+		.box{
+			// padding: 15px 7px 0;
+			float: left;
+			.pic{
+				img{
+					width: 260px;
+				}
+			}
+		}
+	}
 }
