--- a/public/partials/directives/homeDirective.jade
+++ b/public/partials/directives/homeDirective.jade
@@ -3,4 +3,4 @@ div.fall-wrapper
 		div.box(ng-repeat="data in datas")
 			div.pic
 				img.fall-inner-img(alt="" src="{{data.src}}")
-				//- p.fall-inner-p {{data.desc}}
+				p.fall-inner-p {{data.desc}}
