--- a/public/index.jade
+++ b/public/index.jade
@@ -1,6 +1,7 @@
 doctype html
 html.layout-column
 	head(lang="en")
+		base(href="/")
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
 		meta(name="apple-mobile-web-app-capable" content="yes")
