--- a/public/partials/login.jade
+++ b/public/partials/login.jade
@@ -20,7 +20,7 @@ div.layout-column.flex.login-bg-wrapper
 			div.layout-row.submit-div
 				span.flex
 				md-button.md-raised.md-primary(type="submit" ng-disabled="loginForm.$invalid" ui-sref="home") 登 入
-				span.go-to-reg.flex 还没来过，
+				span.go-to-reg.flex
 					span(ui-sref="reg") 点此注册
 	span.flex
 	
