--- a/public/partials/reg.jade
+++ b/public/partials/reg.jade
@@ -31,7 +31,7 @@ div.layout-column.flex.login-bg-wrapper
 			div.layout-row.submit-div
 				span.flex
 				md-button.md-raised.md-primary(type="submit" ng-click="ctrl.reg();" ng-disabled="regForm.$invalid" ui-sref="home") 我填好了
-				span.go-to-reg.flex 我来过了，
+				span.go-to-reg.flex
 					span(ui-sref="login") 我要登录
 	span.flex
 	
