--- a/public/styles/home/home.scss
+++ b/public/styles/home/home.scss
@@ -1,23 +1,164 @@
-.home-wrapper{
-	width: 100%;
-	height: 100%;
-	.home-wrapper-inner{
-		position: relative;
-		z-index: 1;
-		background: url("../assets/images/home_bg.jpg") no-repeat center center;
-		.center-words{
-			text-align: center;
-			font-size: 70px;
-			color: #fff;
+body{
+	.all-wrapper{
+		background-color: #e9eaed;
+		min-width: 1200px;
+		.home-header-wrapper{
+			position: fixed;
+			width: 100%;
+			left: 0;
+			top: 0;
+			height: 80px;
+			background: #393D49;	
+			z-index: 1;
+			.home-header{
+				width: 1140px;
+				height: 100%;
+				font-size: 14px;
+				transition: all 0.5s;
+				overflow: hidden;
+				margin: 0 auto;
+				.home-left-header-ico{
+					float: left;
+					width: 70px;
+					height: 70px;
+					margin: 5px 0;
+					border-radius: 50%;
+					background: url("../assets/images/home/header/ico.jpg") no-repeat;
+					background-position: 0 -30px;
+					background-size: 80px auto;
+				}
+				.home-right-header-nav{
+					float: left;
+					height: 100%;
+					.nav-wrapper{
+						margin: 0 auto;
+						height: 30px;
+						margin: 25px 0 25px 35px;
+						overflow: hidden;
+						position: relative;
+						.nav-inner{
+							cursor: pointer;
+							margin: 0 10px;
+							height: 30px;
+							width: 80px;
+							padding: 0 10px;
+							line-height: 30px;
+							text-align: center;
+							color: #fff;
+							float: left;
+							transition: all 0.5s;
+							outline: none;
+							&:hover{
+								color: #5be0ab;
+							}
+							&.selected{
+								color: #5be0ab;
+							}
+						}
+						.bottom-slider{
+							position: absolute;
+							width: 80px;
+							height: 2px;
+							background-color: #5be0ab;
+							left: 20px;
+							top: 28px;
+							border-radius: 1px;
+							transition: all 0.5s;
+							&.go-first{
+								left: 20px;
+							}
+							&.go-middle{
+								left: 140px;
+							}
+							&.go-last{
+								left: 260px;
+							}
+						}
+					}
+				}
+			}
+		}
+		.content-wrapper{
+			overflow: auto;
+			margin: 100px auto 0;
+			width: 100%;
+			.content-wrapper-inner{
+				width: 1140px;
+				margin: 0 auto;
+				overflow: hidden;
+				.inner-content-inners{
+					box-shadow: 0 2px 4px 0 #c2c2c2;
+					border-radius: 2px;
+					position: relative;
+					height: 280px;
+					width: 30%;
+					margin: 10px 2.5%;
+					float: left;
+					overflow: hidden;
+					cursor: pointer;
+					background-color: #fff;
+					&:nth-child(3n - 2){
+						margin-left: 0;
+					}
+					&:nth-child(3n){
+						margin-right: 0;
+					}
+					&:hover{
+						.over-play{
+							left: 100%;
+						}
+						.img-wrapper{
+							background-size: 110% auto;
+						}
+						.a-wrapper{
+							opacity: 1;
+						}
+					}
+					.over-play{
+						background-image: linear-gradient(0deg,rgba(255,255,255,0),rgba(255,255,255,.7),rgba(255,255,255,0));
+						transform: skewx(-25deg);
+						transition: 0.5s;
+						cursor: pointer;
+						width: 100%;
+						height: 100%;
+						position: absolute;
+						left: -100%;
+						top: 0;
+					}
+					.img-wrapper{
+						height: 200px;
+						overflow: hidden;
+						background-size: 100% auto;
+						background-position: center center;
+						transition: all 0.2s;
+					}
+					p{
+						height: 40px;
+						width: 100%;
+						text-align: center;
+						font-size: 16px;
+						line-height: 40px
+					}
+					.a-wrapper {
+						height: 40px;
+						width: 100%;
+						opacity: 0;
+						transition: all 0.5s;
+						a{
+							display: block;
+							width: 30px;
+							height: 30px;
+							margin: 5px auto;
+							background: url("../assets/images/home/download.png") no-repeat;
+							background-size: 100% 100%;
+							background-position: center center;
+							border-radius: 50%;
+						}
+					}
+						
+					
+				}
+			}
 		}
 	}
-	.real-home-wrapper-inner{
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		left: 0;
-		top: 0;
-		z-index: 0;
-	}
-	
 }
